Make input type=file disabled work properly and look right.  bug 92858, r=rods@netscape.com, sr=roc+moz